# pyxel-breakout

./: LICENSE  Makefile  README.md  pyproject.toml
src/: ball.py  brick.py  constants.py  entity.py  game.pyxres  main.py  math_helper.py  my_resource.pyxres  player.py  score.py
